Fixed leader on block quote
Used in the archives and other places, it left too much space
at the top.

--- a/src/styles/post.less
+++ b/src/styles/post.less
@@ -47,6 +47,9 @@ a img {
 blockquote {
 	color: @gray-light;
 	font-style: italic;
+    p {
+        margin-top: 0px;
+    }
 }
 
 hr.small {
